Install preliminary dependencies.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "cryptodex",
+  "version": "1.0.0",
+  "description": "---",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maxaguirre5/cryptodex.git"
+  },
+  "bugs": {
+    "url": "https://github.com/maxaguirre5/cryptodex/issues"
+  },
+  "homepage": "https://github.com/maxaguirre5/cryptodex#readme",
   "dependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "webpack": "^4.0.1",
+    "webpack-dev-server": "^3.1.0"
   }
 }
