--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.18.2",
     "webpack": "^4.0.1",
     "webpack-dev-server": "^3.1.0"
