--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.18.2",
+    "html-webpack-plugin": "^3.0.4",
+    "react-hot-loader": "^4.0.0",
     "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
   }
 }
