--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.18.2",
+    "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.4",
     "react-hot-loader": "^4.0.0",
     "webpack": "^4.0.1",
